--- a/.github/workflows/teste.yml
+++ b/.github/workflows/teste.yml
@@ -28,4 +28,4 @@ jobs:
    - name: Upload coverage reports to Codecov
      uses: codecov/codecov-action@v3
      env:
-       CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEn }}
+       CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
