--- a/.github/workflows/teste.yml
+++ b/.github/workflows/teste.yml
@@ -25,7 +25,9 @@ jobs:
 
    - name: Run the tests
      run: npm test -- --coverage
+    
    - name: Upload coverage reports to Codecov
-     uses: codecov/codecov-action@v3
-     env:
-       CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+     uses: codecov/codecov-action@v5
+     with:
+       token: ${{ secrets.CODECOV_TOKEN }}
+       slug: 4lxndr3/ab03_01
